# SkyRoadsDuplicate

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md
assets/levels/: level1.json  level2.json  level3.json  level4.json  level5.json  level6.json  stage1_level1.json  stage1_level2.json  stage1_level3.json  stage2_level1.json  stage2_level2.json  stage2_level3.json
core/: Assets.cpp  Assets.hpp  Config.cpp  Config.hpp  CrashHandler.cpp  CrashHandler.hpp  Log.cpp  Log.hpp  PerfTracker.cpp  PerfTracker.hpp  Rng.cpp  Rng.hpp
game/: Game.cpp  Game.hpp  Leaderboard.cpp
render/: GateRenderer.cpp  GateRenderer.hpp  HudWidgets.cpp  HudWidgets.hpp  Palette.cpp  Palette.hpp  Render.cpp  Render.hpp  RenderUtils.hpp  SceneDressing.cpp  SceneDressing.hpp  SpaceObjects.cpp  SpaceObjects.hpp
scripts/: build.ps1  build.sh  clean_build.sh  run.ps1  run.sh  screenshot.sh  screenshot_levels.ps1  screenshot_levels.sh  test.ps1  test.sh  validate.sh  validate_levels.sh
sim/: Bot.cpp  Bot.hpp  BuiltinLevels.cpp  EndlessLevelGenerator.cpp  EndlessLevelGenerator.hpp  Level.cpp  Level.hpp  LevelGeometry.cpp  LevelLoader.cpp  LevelVariantAssigner.cpp  PowerUp.cpp  PowerUp.hpp  Sim.cpp  Sim.hpp
src/: main.cpp
tests/: ScreenshotTest.cpp  SimTests.cpp
tools/: sim_runner.cpp
